# ecalj

./: .gitignore  .ignore  CleanAll  CleanAll.gfortran  CleanAll.gfortran.bash  CleanAll.ifort  CleanAll.ifort.bash  CleanAll.ifort.cmd.bash  CleanAll.ifort12  InstallAll  InstallAll.gfortran  InstallAll.gfortran.bash  InstallAll.gfortran.centos7.1  InstallAll.gfortran.mac  InstallAll.hakozaki.bash  InstallAll.ifort  InstallAll.ifort.bash  InstallAll.ifort.cmd  InstallAll.ifort.rcgw  InstallAll.ifort12  InstallAll.nvfortran  InstallAll.pgi  InstallAll.py  LICENCE  MEMO  README  README.md  README.org  README_GPU.md  README_ISSP.md  README_Install.md  README_Install.org  README_hints.md  README_hints.org  README_mmtarget.aftest.txt  README_old.org  README_wannier.org  READMEecalj  READMEsamples  fpgw_version_log  (+14 more)
CMD22sample/: ctrl.nio  ctrl.wgan  ctrlgen2.ctrl.nio  ctrlgen2.ctrl.zns  ctrls.inas  ctrls.wgan  ctrls.zns  save.zns  syml.zns
CMDsample/: README  ctrl.fe  ctrl.wgan  ctrls.fe  ctrls.nio  ctrls.si  syml.wgan  test_nio.sh
Document/: README.ecalj  cmdworkshop.pptx  fpgw_version_log  help_lmfjobgw.org
Doxygen/: Doxyfile  README.md
GetSyml/: README  README.md  README.org  ctrl.2hsic  ctrl.3csic  ctrl.4hsic  ctrl.ag  ctrl.ag.qsgw  ctrl.alas  ctrl.aln  ctrl.alnzb  ctrl.alp  ctrl.alsb  ctrl.batio3  ctrl.c  ctrl.cdo  ctrl.cds  ctrl.cdse  ctrl.cdte  ctrl.ce  ctrl.cndn  ctrl.cssncl3  ctrl.cu  ctrl.cubic  ctrl.es  ctrl.euo  ctrl.eus  ctrl.euse  ctrl.eute  ctrl.ga2o3  ctrl.gaas_so  ctrl.gan  ctrl.ganzb  ctrl.gap  ctrl.gasb  ctrl.ge  ctrl.h  ctrl.hfo2  ctrl.hgo  ctrl.hgs  (+53 more)
Junkbox/: CMakeCache.txt  CMakeLists.txt  CleanAll.ifort.cmd  InstallAll.gfortran.centos7.1  InstallAll.ifort.cmd
Junkbox/fp.bk/: make.inc
Junkbox/fp.bk/test/: atparms  bnds.cu  occnum.er  occnum2.eras  site.er  specialspec1  x2
Junkbox/fp.bk/test/ls/: ctrl.gaslc  ctrl.gasls  rsta.gasls  semi.mater  syml.gasls
Junkbox/fpgw.bk/: TAGS
Junkbox/fpgw.bk/TESTinstallGW/cugase2_gwsc222/: dat_cputime
Junkbox/fpgw.bk/TESTinstallGW/gas_epsPP_lmfh/: log.gas  lx0
Junkbox/fpgw.bk/TESTinstallGW/gas_gwsc/: GWinput  QPU  ctrl.gas
Junkbox/fpgw.bk/TESTinstallGW/gas_gwsc666/: ctrl.gas  log.gas
Junkbox/fpgw.bk/TESTinstallGW/gas_pw_gw_lmfh/: ctrl.gas
Junkbox/fpgw.bk/TESTinstallGW/nio_gwsc/: GWinput  ctrl.nio  log.nio
Junkbox/fpgw.bk/TESTinstallGW/nio_gwsc444/: GWinput
Junkbox/fpgw.bk/TESTinstallGW/si_gwsc/: QPU  log.si
Junkbox/fpgw.bk/pys/: Read_Sakakibara_W.py  seperate_SEComg_int.py
Junkbox/fpgw.bk/util/: Hilbert.F  analizeQPU.F  bndconv.F  calj_interp_mat  correct_tote.F  gapdat.F  gaussbroad.F  makefile  spinw_AF2_Jmat.F  tccal.F  zeotest.F
Junkbox/fpgw.bk/util/util2/: plsp  plsp_fe  plsp_fe2  pqk
Junkbox/lm7K.bk/: #lmv7.F#  .fc_version  CPPCHECK.sh  Make.inc.pgi_mpik  Makefile  TAGS  chekckmodule.tmp  job_band  lmfCPW.F.bk  lmf_efermi  moduledepends.gfortran.inc  moduledepends.gfortran_mpik.inc
Junkbox/lm7K.bk/JunkBox/: ctrlgen.py
Junkbox/lm7K.bk/TOOLS/HomoDimer/: pldimer2  savedata4  savedata4xw
Junkbox/lm7K.bk/TOOLS/HomoDimer/JOBsample/: jobBe  jobCuZn  jobLi  jobNi  jobSc  jobTiV
Junkbox/lm7K.bk/TOOLS/jobpack/: job_O  job_molecule_dis.py  job_molecule_ini.py  jobmoleh  jobmolpwe
Junkbox/lm7K.bk/lm7K/: CallCaller.sh  GenCCtree.sh  Makefile  ccmap.dot  ccmap.ps
Junkbox/lm7K.bk/lm7K/TOOLS/jobpack/: README  job_eh_O  job_molecule_dis2.py  jobmolpwe2
Junkbox/slatsm.bk/: README  chekckmodule.tmp  make.inc  makefile~  moduledepends.gfortran.inc  moduledepends.inc
MATERIALS/: Materials.ctrls  Materials.ctrls.database  README  README.org  README_HamMTO.html  README_HamMTO.org  README_MATERIALS.org  ctrl.mgoco  ctrlgenM1.py  job_check  job_material.py  job_materials.py  job_vbm  sortvbm.py  syml.2hsic  syml.4hsic  syml.es  syml.fe  syml.ymn2
MPdata/: README.org  creplot.py  editglt.py  getgap.py  job  job_mp  joball.py  jobtemplate  list.job_mp  mpquery1.py  mpqueryALL.py  selectlist.py
MPdata_rcgw/: MPqueryALL  README.org  creplot.py  job  job_mp  joballqsub  jobtemplate
SRC/: TAGS
SRC/exec/: CMakeLists.txt  MachineDependence.py  Make.gfortran.inc  Make.gfortran.inc~  Make.ifort.inc  Make.ifort.inc~  Makefile  Makefile.mac  Makefile~  Makeinstall  Makeshow  TAGS  a2vec.py  cleargw  comp.py  copybin  ctrl2ctrlp.py  ctrlgenM1.py  ctrlgenPDOStest.py  dqpu  dummy.f90  epsPP  epsPP0  epsPP0phispinsym  epsPP_lmfh  epsPP_lmfh_chipm  epsPP_lmfh_intra  epsPP_lmfhgamma  epsPP_magnon_chipm_mpi  epsPPphispinsym  eps_lmfh  eps_lmfh_chipm  genMLWF  genMLWF_vw  genMLWFdipole  genMLWFhso  genMLWFmod  genMLWFx  genMLWFx~  genuumat  (+43 more)
Samples/: README
Samples_ISSP/: README.md
StructureTool/: README.org  README.txt  convctrl.py  ctrl2vasp.py  ctrls.nd2fe14b  makelink  refineposcar.py  rescalectrl.py  vasp2ctrl.py  viewvesta.py
TOOLS/: Findent  Gaunt.F  Remove_AtypeofCommentLine.py  UnUsedSource.F  absolute-path  analyze1.py  checkmodule  comment_zeroclear.py  comp  comp.eval  compall  converttof90.py  ddos.py  delw0420.tgz  delwall.py  diffnum  diffnum0.py  diffnum2  f2f.pl  f_calltree.py  f_calltree2.py  f_subtree.py  f_subtree2.py  fatest.py  find_replace.py  findent  job_intent  lstratable  m_commandline.F  modifyuse.py  nan.F  pss1  pss2  pss3  stoner.F  takao_test_parse1.py  takao_test_read2.py  test2.F  testx.F
TOOLS2/: ddos.py  fixmakedepend.tgz
TestDelw/: job  jobslatsm  jobsubs
TestInstall/: Makefile  Makefile.define  README.txt
Wannier/: Makefile  RSMPI_rotkindex_mod.F  efsimplef_RSMPI.F  ent_MPI.F  genMLWF  hband_ent_MPI.m.F  hmaxloc  hnocc_mlw.F  hpsig  hpsig_MPI  hpsig_MPI.F  hqpband_ent_MPI.m.F  hupdt_ent_MPI.m.F  huumat  huumat_MPI  hwmat.F  hwmatK.F  hwmat_MPI.F  hx0fp0.m.F  index.F  maxloc1.F  maxloc4.F  mh_hupdt_ent_MPI.m.F  qpe1_mlw.F  wanplot  wmat.F  wmatK.F  wmat_MPI.F  xsfformat2.F
ecalj_auto/: README.md  bandpng.py  config.ini  jobgw1000.sh  jobgw1500.sh  jobtemplate.kugui  jobtemplate.ohtaka  jobtemplate.ucgw  jobtest1.sh  jobtestSGA.sh  jobtestSGAkmeshfix.sh  packoutput.py  query.sh  queryx.sh  testchk.py
fpgw/: CallCaller.sh  Doxyfile  TAGS  analyze.sh  (+2 more)
(+11623 files in other folders)
